# faceless

./: .env.example  .gitignore  Dockerfile  Makefile  claude.md  docker-compose.yml  pyproject.toml
.github/workflows/: run_pipeline.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  run_daily.py  settings.py
app/agents/: asset_generator.py  metadata_agent.py  publisher.py  qa_moderator.py  scriptwriter.py  storyboard.py  topic_selection.py  trend_research.py  video_assembler.py
app/api/: main.py
app/api/routes/: health.py  runs.py
app/db/: base.py  models.py  session.py
app/pipelines/: daily_pipeline.py  retry_pipeline.py
app/services/image_gen/: dalle_service.py  image_text_guard.py
app/services/moderation/: openai_moderation.py
app/services/music_gen/: music_service.py
app/services/ocr/: openai_ocr.py
app/services/tiktok_publish/: mode_a.py  mode_c.py
app/services/trends/: google_trends.py  youtube_trends.py
app/storage/: artifact_paths.py  local_storage.py
app/tasks/: celery_app.py  task_definitions.py
app/utils/: cost_tracker.py  logging.py  notifications.py  retry.py  spellcheck.py  text_match.py
configs/: safety_blocklist.yaml  sfx_manifest.yaml  spellcheck_allowlist.txt  topic_categories.yaml  visual_styles.yaml
scripts/: generate_test_video.py  run_full_pipeline.py
tests/: conftest.py
tests/integration/: test_db_models.py  test_pipeline_smoke.py
tests/unit/: test_cost_tracker.py  test_moderation.py  test_script_schema.py  test_topic_filter.py  test_video_assembly.py
(+3 files in other folders)
